# algonaut_uri

./: .gitignore  Cargo.toml  README.md
.github/workflows/: general.yml
examples/: qr_code.rs
src/: lib.rs
src/snapshots/: algonaut_uri__tests__asset_transfer.snap  algonaut_uri__tests__optin_asset.snap  algonaut_uri__tests__payment.snap  algonaut_uri__tests__request_asset_units.snap  algonaut_uri__tests__request_payment.snap  algonaut_uri__tests__request_payment_with_note.snap  algonaut_uri__tests__share_address.snap  algonaut_uri__tests__share_address_with_label.snap
